# alembic-testing

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: alembic.ini
app/alembic/: env.py
app/alembic/versions/: 5fd694768c6c_initial.py  c1c21b1515c7_split_floor_and_seat.py
app/app/: schema.py  settings.py  utils.py
app/tests/: conftest.py  test_data_migrations.py  test_migrations_up_to_date.py  test_stairway.py
