[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Evgeny Malikov <evgeny.m3v@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "1.3.13"
alembic = "1.8.1"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"
pylint-pytest = "^1.1.7"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = "migrations"
line_length = 79
lines_after_imports = 2

# pytest
[tool.pytest.ini_options]
addopts = "-v"
pythonpath=["app"]
testpaths = ["app/tests"]

# mypy
[tool.mypy]
exclude = ["alembic/"]


[tool.pylint]
ignore = [".git", "__pycache__", "alembic", ".venv"]
load-plugins = ["pylint_pytest"]
max-line-length = 79
disable = ["C0114, C0115, C0116, W1514, W3101, R0903"]